# cpp_experiment_recorder

./: CMakeLists.txt  README.md  main.cpp  recorder.h
scripts/: recorder.py
